# ITLAuth

./: .gitignore  APISERVER-OIDC-SETUP.md  AZURE_STYLE_COMPLETE.md  COMPLETION_REPORT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PYPI_CHECKLIST.md  QUICKREF_TOKEN_CLI.md  QUICKSTART.md  QUICKSTART_AZURE_STYLE.md  README.md  configure-apiserver-oidc.sh  create-persistent-token.sh  create-sa-kubeconfig.sh  docker-compose.yml  generate_current_token.py  install.ps1  install.sh  itl-oidc.yaml.example  itl_k8s_oidc-0.0.0-py3-none-any.whl  keycloak_sa_manager.py  pyproject.toml  requirements.txt  setup.py  test_gateway_workflow.ps1  test_simple.ps1  test_token_cli.py  verify-install.py
.github/: instructions.md
.github/workflows/: build.yml  ci.yml  publish.yml  workflow.yml
demo/: itlc-interactive-demo.html
docs/: SDK_USAGE.md  TOKEN_CLI_INTEGRATION.md  index.md
docs/architecture/: README.md  SELF_HOSTED_SECURITY.md
docs/authentication/: INTERACTIVE_LOGIN.md  README.md  REALM_DISCOVERY.md  REALM_ISOLATION.md
docs/examples/: apiserver-oidc.yaml  kubeconfig-oidc.yaml  rbac-oidc.yaml  service-accounts.yaml
docs/guides/: INSTALLATION.md  SERVICE-ACCOUNTS.md  TROUBLESHOOTING.md
docs/scripts/: README.md
docs/scripts/oidc-setup/: check-oidc-config.sh  configure-apiserver-oidc-enhanced.sh  configure-apiserver-oidc.ps1
docs/scripts/service-accounts/: Create-KeycloakServiceAccount.ps1  create-keycloak-service-account.sh
docs/scripts/token-management/: Extract-CurrentToken.ps1  manage-oidc-tokens.sh  persistent_token_manager.py
examples/: core_resources_demo.py
itl_k8s_oidc/: __init__.py  cli.py  config.py  setup.py
itl_k8s_oidc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
itl_kubectl_oidc_setup/: __init__.py  __main__.py  auth.py
src/cluster-config-api/: Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
src/cluster-config-api/configs/: cluster.yaml
src/itl_k8s_oidc/: __init__.py  cli.py  config.py  defaults.py  krew.py  kubelogin.py  utils.py
src/itlc/: README.md  __init__.py  __main__.py  callback_error.html  callback_success.html  cluster_commands.py  clusters.py  controlplane_client.py  core_commands.py  interactive_auth.py  keycloak_client.py  kubectl_oidc_setup.py  oidc_auth.py  server_onboarding.py  token_cache.py
tests/: __init__.py  test_basic.py  test_keycloak_client.py
