[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "itl-k8s-oidc"
dynamic = ["version"]            # version comes from VCS tags
description = "Kubernetes OIDC via Keycloak + kubelogin automation."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "ITlusions", email = "noreply@example.com" }]
keywords = ["kubernetes","oidc","keycloak","kubelogin","krew"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
itl-oidc-setup = "itl_k8s_oidc.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# accept tags like v0.1.0 or 0.1.0 (SemVer)
tag_regex = "^v?(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"